# emojay

./: .gitignore  Cargo.toml
src/: main.rs  mojis.rs
